testdata/baselines/reference/submodule/conformance/jsDeclarationsParameterTagReusesInputNodeInEmit2.errors.txt
base.js(11,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== base.js (1 errors) ====
    class Base {
        constructor() {}
    }
    
    const BaseFactory = () => {
        return new Base();
    };
    
    BaseFactory.Base = Base;
    
    module.exports = BaseFactory;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== file.js (0 errors) ====
    /** @typedef {typeof import('./base')} BaseFactory */
    
    /**
     *
     * @param {InstanceType<BaseFactory["Base"]>} base
     * @returns {InstanceType<BaseFactory["Base"]>}
     */
    const test = (base) => {
        return base;
    };
    